--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,29 @@
+require:
+  - rubocop-performance
+  - rubocop-rspec
+
 Metrics/LineLength:
   Description: 'Limit lines to 100 characters.'
   StyleGuide: '#80-character-limits'
   Enabled: true
   Max: 120
+
+Metrics/MethodLength:
+  Max: 20
+
+Metrics/AbcSize:
+  Max: 20
+
+Metrics/ParameterLists:
+  CountKeywordArgs: false
+
+Metrics/BlockLength:
+  Exclude:
+    - ./spec/**/*_spec.rb
+
+Style/Documentation:
+  Enabled: false
+
+Style/CaseEquality:
+  Exclude:
+    - movie.rb
