--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,3 +3,19 @@ Metrics/LineLength:
   StyleGuide: '#80-character-limits'
   Enabled: true
   Max: 120
+
+Metrics/MethodLength:
+  Max: 20
+
+Metrics/AbcSize:
+  Max: 20
+
+Metrics/ParameterLists:
+  CountKeywordArgs: false
+
+Style/Documentation:
+  Enabled: false
+
+Style/CaseEquality:
+  Exclude:
+    - movie.rb
